# just-certify

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  WELCOME.md  battle_test.py  fly.toml  openapi.yaml  railway.json  redocly.yaml  start.sh
.github/workflows/: ci.yml
crates/sem-ipld/: CHANGELOG.md  Cargo.toml  README.md
crates/sem-ipld-service/: Cargo.toml  README.md
crates/sem-ipld-service/docs/did/: README.md  did.json
crates/sem-ipld-service/docs/specs/: uor-dag-cbor-2025.md
crates/sem-ipld-service/src/: lib.rs  main.rs  multibase_util.rs  projection.rs  store.rs
crates/sem-ipld-service/tests/: absolute_urls.rs  kubo_integration.rs  uor_conformance.rs  vc_projection.rs
crates/sem-ipld/examples/: adapter_ai_model.rs  adapter_unstructured.rs  adapter_web2_http.rs  round_trip.rs
crates/sem-ipld/src/: context.rs  integrity.rs  ipld.rs  jsonld.rs  lib.rs  publish.rs
crates/sem-ipld/src/hasher/: mod.rs
crates/sem-ipld/tests/: babel_fish.rs  cid_and_integrity.rs  determinism_audit.rs  golden_cids.rs  kernel_roundtrip.rs  round_trip.rs  sri_hashers.rs  v023_additions.rs
crates/uor-vc-crypto/: CHANGELOG.md  README.md
crates/uor-vc-crypto/src/: lib.rs
crates/uor-vc-crypto/tests/: test_vectors.rs
deploy/: DEPLOY.md  Dockerfile  start.sh
sem-ipld/: Cargo.toml
sem-ipld-service/: CHANGELOG.md  Cargo.toml
sem-ipld-service/src/: lib.rs  store.rs
sem-ipld-service/tests/: kubo_integration.rs
sem-ipld/examples/: adapter_ai_model.rs  adapter_unstructured.rs
sem-ipld/tests/: babel_fish.rs  golden_cids.rs  v023_additions.rs
uor-vc-crypto/: Cargo.toml
