[package]
name = "sem-ipld-service"
version = "0.4.0"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
description = "HTTP surface for sem-ipld: POST /v1/certify + GET /v1/blocks/{cid} (IPIP-402 trustless gateway). Backed by a local Kubo IPFS sidecar for durable content-addressed storage."

[dependencies]
# Library.
sem-ipld = { path = "../sem-ipld", features = ["publish"] }

# Kernel.
uor-foundation = { path = "../../../UOR-Framework/foundation", default-features = false, features = ["alloc", "std"] }

# IPLD types.
cid = { version = "0.11", default-features = false, features = ["alloc"] }

# FIX 4 native dag-cbor path.
ipld-core          = "0.4"
serde_ipld_dagcbor = { version = "0.6", default-features = false }

# HTTP stack.
axum      = { version = "0.7", default-features = false, features = ["http1", "http2", "json", "tokio", "query", "matched-path"] }
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tower     = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["trace", "cors"] }

# v0.2.0: durable-store dependencies.
# reqwest is now a runtime dep (was dev-only in v0.1.x). Enables the
# Kubo RPC client with multipart uploads for /api/v0/block/put.
reqwest     = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
async-trait = "0.1"
lru         = "0.12"
thiserror   = "1"

# v0.1.x holdovers kept for the MemoryStore variant (useful in tests
# and for the opt-in `--store=memory` invocation).
dashmap = "6"

# v0.3.0: W3C Semantic Web projection layer.
# v0.4.0: bumped to 0.2.0 for the signed-cryptosuite variant.
uor-vc-crypto = { path = "../uor-vc-crypto" }
multibase     = "0.9"
serde_bytes   = "0.11"

# v0.4.0: Ed25519 key parsing for SEM_IPLD_ISSUER_KEY_B64.
ed25519-dalek = "2"
base64        = "0.22"

# Serde glue.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Logging.
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Integration tests; promoted to runtime above but dev keeps the
# oneshot-request convenience features.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "test-util"] }

[[bin]]
name = "sem-ipld-service"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
