[package]
name = "uor-vc-crypto"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
description = "W3C Data Integrity 1.0 cryptosuites `uor-dag-cbor-2025` (tamper-evidence) and `uor-dag-cbor-ed25519-2025` (signed) — content-addressed proofs via DAG-CBOR canonicalization."

[dependencies]
sem-ipld           = { path = "../sem-ipld", features = ["publish"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_ipld_dagcbor = { version = "0.6", default-features = false }
cid                = { version = "0.11", default-features = false, features = ["alloc"] }
thiserror          = "1"

# v0.2.0 additions for the signed cryptosuite.
ed25519-dalek      = { version = "2", features = ["rand_core"] }
rand_core          = { version = "0.6", features = ["getrandom"] }
multibase          = "0.9"
base64             = "0.22"

[[bin]]
name = "verify_vc_smoke_test"
path = "src/bin/verify_vc_smoke_test.rs"

[[bin]]
name = "verify_signed_smoke_test"
path = "src/bin/verify_signed_smoke_test.rs"

[[bin]]
name = "gen-issuer-key"
path = "src/bin/gen_issuer_key.rs"
