[package]
name = "sem-ipld"
version = "0.2.3"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
description = "Surgical adapter unifying UOR Foundation proofs with IPLD, JSON-LD, and SRI-2. Arrows go *into* UOR — existing systems stay pristine."
repository = "https://uor.foundation/sem-ipld"
homepage = "https://uor.foundation/"
keywords = ["uor", "ipld", "jsonld", "semantic-web", "sri"]
categories = ["data-structures", "cryptography", "encoding", "no-std"]
readme = "README.md"

# ─────────────────────────────────────────────────────────────────────────────
# The micro-kernel philosophy (the "low proposal" north star):
#
#   UOR changes nothing in any existing system.
#   sem-ipld is the thin convenience layer on top of a one-file IPLD adapter.
#   Every concern the upstream Rust ecosystem already solves well is
#   delegated to that upstream crate, not re-implemented here.
#
# What sem-ipld owns:      the composition (Hasher ↔ IPLD ↔ JSON-LD ↔ SRI).
# What sem-ipld delegates: CID construction, DAG-CBOR encoding, base64.
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]
# Anchor: the UOR typed trait surface (Hasher, Grounded, GroundingCertificate).
uor-foundation = { version = "0.3.0", path = "../../../../UOR-Framework/foundation", default-features = false }

# RustCrypto SHA-2 — the one cryptographic primitive we depend on directly.
sha2 = { version = "0.10", default-features = false }

# IPLD CID v1 — upstream, `no_std + alloc` compatible.
cid = { version = "0.11", default-features = false, features = ["alloc"], optional = true }

# Deterministic DAG-CBOR encoding. This is the IPLD-blessed encoder; we
# don't reinvent it. (The `cid` crate re-exports `multihash`, so we do
# not need a separate multihash dependency.)
serde_ipld_dagcbor = { version = "0.6", default-features = false, optional = true }

# Base64 (standard alphabet, padded) for the SRI-2 integrity attribute.
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }

# Serde glue.
serde       = { version = "1",  default-features = false, features = ["derive"],  optional = true }
serde_bytes = { version = "0.11", default-features = false,                        optional = true }
serde_json  = { version = "1",  default-features = false, features = ["alloc"],    optional = true }

[dev-dependencies]
uor-foundation-test-helpers = { path = "../../../../UOR-Framework/uor-foundation-test-helpers" }
# Decode CBOR into the `Ipld` enum for link-structure verification.
ipld-core = "0.4"

[features]
# `default = []` — pure `no_std`, no heap: the SRI hasher (`SriHasher256`)
# and the multihash code constants are the only surface.
default = []

# `alloc` turns on the CID + DAG-CBOR + base64 adapters.
alloc = ["dep:cid", "dep:serde_ipld_dagcbor", "dep:base64"]

# `std` adds file-system helpers where relevant. Implies `alloc`.
std = ["alloc"]

# `serde` enables the JSON-LD projection + the `load_as_jsonld()` parser.
# Implies `alloc`.
serde = ["alloc", "dep:serde", "dep:serde_bytes", "dep:serde_json"]

# `publish` = alloc + serde — what application code wants.
publish = ["alloc", "serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sem_ipld"
path = "src/lib.rs"
